src/App.scss
.apid-c-page-landingpage, .apid-c-page-apipage {
  --pf-c-page__main--ZIndex: 1;
  .pf-c-page__main {
    overflow: hidden;
  }
 }

 @media only screen and (max-width: 768px) {
  .apid-c-page-landingpage {
    .pf-c-sidebar__panel {
      position: relative !important;
    }
    .pf-c-sidebar__content {
      height:auto;
      overflow: visible !important;
    }
    .pf-c-page__main-group {
      position: relative;
    }
    .pf-c-page__main-section {
      box-shadow: none;
    }
  }
}

.apid-c-page-landingpage {
  .pf-c-sidebar__main {
    height: 100%;
  }
  .pf-c-sidebar__content {
    height: 100%;
    overflow: hidden;
    background: var(--pf-global--BackgroundColor--200);
    box-shadow: inset 0.125rem 0 0.125rem -0.0625rem rgba(3, 3, 3, 0.16);
  }
  .pf-c-text-input-group {
    width: 250px;
    &__icon {
      display: none;
    }
    &__text-input {
      padding-left: var(--pf-global--spacer--sm);
    }
  }
  .pf-c-check {
    --pf-c-check__label--FontSize: var(--pf-c-content--small--FontSize);
    --pf-c-check__label--LineHeight: var(--pf-c-content--small--LineHeight);
  }
  .pf-c-page__main-section {
    box-shadow: inset 0.125rem 0 0.125rem -0.0625rem rgba(3, 3, 3, 0.16);
    height: 100%;
    overflow: scroll;
  }
  .pf-c-card__body {
    display: flex;
    flex-direction: column;
    .apid-tags__main {
      margin-top: auto;
      padding-top: var(--pf-global--spacer--sm);
    }

    svg {
      width: 38px;
      height: 38px;
    }
  }
}

.apid-c-page-apipage {
  .pf-c-sidebar__main {
    height: 100%;
  }
  .pf-c-sidebar__content {
    height: 100%;
    padding-bottom: var(--pf-global--spacer--3xl);
    overflow: auto;
    box-shadow: inset 0.2rem 0 0.2rem -0.0625rem rgba(3, 3, 3, 0.1);
    .pf-c-page__main-section {
      box-shadow: inset 0.2rem 0 0.2rem -0.0625rem rgba(3, 3, 3, 0.1);
    }
    .apid-c-divider {
      margin-left: -32px;
    }
  }
}

.apid-c-card-codeblock {
  .pf-c-dropdown {
    --pf-c-dropdown__toggle--BackgroundColor: var(--pf-global--BackgroundColor--dark-100);
    --pf-c-dropdown__toggle--Color: var(--pf-global--Color--light-200);
    --pf-c-dropdown__toggle--Color: var(--pf-global--Color--light-200);
    --pf-c-dropdown__toggle--m-plain--Color: var(--pf-global--Color--light-200);
    --pf-c-dropdown__toggle--m-plain--hover--Color: var(--pf-global--Color--light-200);
    --pf-c-dropdown__toggle-icon--Color: var(--pf-global--Color--light-200);
    --pf-c-dropdown--m-plain--hover__toggle-icon--Color: var(--pf-global--Color--light-200);
    --pf-c-dropdown__menu--BackgroundColor: var(--pf-global--BackgroundColor--dark-100);
    --pf-c-dropdown__menu-item--Color: var(--pf-global--Color--light-200);
    --pf-c-dropdown__menu-item--hover--Color: var(--pf-global--Color--light-200);
    --pf-c-dropdown__menu-item--hover--BackgroundColor: var(--pf-global--BackgroundColor--dark-200);
  }
  .pf-c-button {
    color: var(--pf-global--Color--light-200);
  }
  .pf-c-code-editor {
    --pf-c-code-editor__header--before--BorderBottomWidth: 0;
    --pf-c-code-editor__main--BorderColor: var(--pf-global--BackgroundColor--dark-100);
    --pf-c-code-editor__main--BackgroundColor: var(--pf-global--BackgroundColor--dark-100);
    --pf-c-code-editor__code--PaddingLeft: 0;
    --pf-c-code-editor__code--PaddingTop: var(--pf-global--spacer--md);
  }
  .monaco-editor, .monaco-editor-background {
    padding-bottom: 0;
    padding-top: 0;
    background-color: var(--pf-global--BackgroundColor--dark-100);
  }
}

.apid-c-accordion-operations.pf-c-accordion, .apid-c-accordion-schemas.pf-c-accordion {
  --pf-c-accordion__expanded-content-body--PaddingLeft: var(--pf-global--spacer--2xl);
  border-left: 1px solid var(--pf-global--BorderColor--100);
  border-right: 1px solid var(--pf-global--BorderColor--100);
  .pf-c-accordion__toggle-text {
    flex-grow: 1;
    text-align: left;
    margin-left: var(--pf-global--spacer--md);
  }
  .pf-c-tree-view {
    --pf-c-tree-view__node--indent--base: 0;
    --pf-c-tree-view__node--PaddingLeft: var(--pf-global--spacer--lg);
    --pf-c-tree-view--m-compact__node-container--PaddingTop: var(--pf-global--spacer--xs);
    --pf-c-tree-view--m-compact__node-container--PaddingBottom: var(--pf-global--spacer--sm);
  }
}

.apid-reqbody-header {
  padding-top: var(--pf-global--spacer--md);
}

